import org.gradle.api.attributes.java.TargetJvmVersion

plugins {
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

def java25Launcher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(25)
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(25)
}

[
    configurations.compileClasspath,
    configurations.runtimeClasspath,
    configurations.testCompileClasspath,
    configurations.testRuntimeClasspath
].each { cfg ->
    cfg.attributes.attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 25)
}

tasks.withType(JavaExec).configureEach {
    javaLauncher = java25Launcher
}

repositories {
    mavenCentral()
}

dependencies {
    // LITIENGINE: the main dependency for game development
    implementation "de.gurkenlabs:litiengine:0.11.1"

    // LibGDX: expose this API to users because of core.level.elements.ILevel
    api supportDependencies.gdx
    api supportDependencies.gdx_platform
    api supportDependencies.gdx_backend_lwjgl3
    api supportDependencies.gdx_lwjgl3_glfw_awt_macos
    api supportDependencies.gdx_freetype
    api supportDependencies.gdx_freetype_platform
    api supportDependencies.gdx_backend_headless

    // Netty for server-client communication
    implementation supportDependencies.netty_all

    // JUnit and Mockito for testing
    testImplementation supportDependencies.junit
    testImplementation supportDependencies.junitLauncher
    testRuntimeOnly supportDependencies.junitLauncher
    testImplementation supportDependencies.mockito_core
    testImplementation "com.badlogicgames.gdx:gdx-backend-lwjgl:1.14.0"
    testImplementation("com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion")
    testImplementation("com.badlogicgames.gdx:gdx:$gdxVersion")
}


sourceSets.main.java.srcDirs = ['src/']
sourceSets.main.resources.srcDirs = ['assets/']

sourceSets.test.java.srcDirs = ['test/']
sourceSets.test.resources.srcDirs = ['test_assets/']

tasks.register('runLitiengineStarter', JavaExec) {
    group 'starter'
    mainClass = 'starter.LitiengineStarter'
    classpath = sourceSets.main.runtimeClasspath
    workingDir = projectDir
}

tasks.register('runMPServer', JavaExec) {
    group 'starter'
    mainClass = 'starter.MultiplayerServer'
    classpath = sourceSets.main.runtimeClasspath
}

tasks.register('runMPClient', JavaExec) {
    group 'starter'
    mainClass = 'starter.MultiplayerClient'
    classpath = sourceSets.main.runtimeClasspath
}

tasks.register('checkNoEngineImports') {
    doLast {
        def enforcePrefixes = [
            "core/",
            "contrib/components/",
            "contrib/configuration/",
            "contrib/entities/",
            "contrib/systems/",
            "contrib/utils/components/ai/",
            "contrib/utils/components/skill/"
        ]

        def allowPrefixes = [
            "core/platform/gdx/",
            "core/game/gdx/",
            "core/ui/gdx/",
            "core/platform/litiengine/",
            "core/game/litiengine/",
            "contrib/hud/",
            "contrib/platform/gdx/"
        ]

        def forbidden = []

        sourceSets.main.java.srcDirs.each { srcDir ->
            if (srcDir == null || !srcDir.exists()) return
            def javaRoot = srcDir.toPath()

            fileTree(srcDir).matching { include "**/*.java" }.files.each { f ->
                def rel = javaRoot.relativize(f.toPath()).toString().replace('\\','/')

                if (!enforcePrefixes.any { p -> rel.startsWith(p) || rel == p }) return

                def txt = f.getText("UTF-8")
                def hasEngineImport =
                    txt.contains("import com.badlogic.gdx.") ||
                        txt.contains("import de.gurkenlabs.litiengine.")

                if (!hasEngineImport) return

                def allowed = allowPrefixes.any { rel.startsWith(it) }
                if (!allowed) forbidden << rel
            }
        }

        if (!forbidden.isEmpty()) {
            throw new GradleException(
                "Forbidden engine imports found outside backend packages:\n  - "
                    + forbidden.sort().join("\n  - ")
            )
        }
    }
}

tasks.register('reportLibgdxImports') {
    group = 'verification'
    description = 'Lists all files in the dungeon module that contain libGDX import statements.'

    doLast {
        def excludedPrefixes = [
            "build/",
            ".gradle/",
            ".idea/",
            "out/"
        ]

        def matches = []

        fileTree(projectDir) {
            include "**/*.java"
        }.files.each { f ->
            def rel = projectDir.toPath().relativize(f.toPath()).toString().replace('\\', '/')

            if (excludedPrefixes.any { rel.startsWith(it) }) return

            def lines = f.readLines("UTF-8")
            def importHits = []

            lines.eachWithIndex { line, index ->
                if (line =~ /^\s*import\s+com\.badlogic\.gdx\./) {
                    importHits << "line ${index + 1}: ${line.trim()}"
                }
            }

            if (!importHits.isEmpty()) {
                matches << [file: rel, imports: importHits]
            }
        }

        def reportDir = new File(buildDir, "reports")
        reportDir.mkdirs()
        def reportFile = new File(reportDir, "libgdx-imports.txt")

        if (matches.isEmpty()) {
            reportFile.text = "No libGDX imports found.\n"
            println "No libGDX imports found."
            println "Report written to: ${reportFile}"
            return
        }

        def sb = new StringBuilder()
        sb.append("Files containing libGDX imports:\n\n")

        matches.sort { it.file }.each { match ->
            sb.append("- ${match.file}\n")
            match.imports.each { hit ->
                sb.append("    ${hit}\n")
            }
            sb.append("\n")
        }

        reportFile.text = sb.toString()

        println sb.toString()
        println "Report written to: ${reportFile}"
    }
}

tasks.named("check") {
    dependsOn("checkNoEngineImports")
}

tasks.named("compileJava") {
    dependsOn("checkNoEngineImports")
}

tasks.named('test', Test) {
    useJUnitPlatform()
    javaLauncher = java25Launcher
}
